--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.3",
     "del": "^2.2.2",
     "ejs": "~2.5.6",
+    "errorhandler": "^1.5.0",
     "express": "~4.15.2",
     "express-session": "^1.15.2",
     "gulp": "github:gulpjs/gulp#4.0",
