Edit deploy(add vendor component handling(styles)); add animate css

--- a/config/config.json
+++ b/config/config.json
@@ -9,5 +9,14 @@
         }
       }
     }
+  },
+  "session":{
+    "secret":"some_secret_word",
+    "key":"sid",
+    "cookie":{
+      "path":"/",
+      "httpOnly": true,
+      "maxAge": null
+    }
   }
 }
