--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "^1.6.4",
     "bootstrap": "^3.3.7",
     "angular-ui-router": "^1.0.3",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "angular-bootstrap": "^2.5.0"
   }
 }
