--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "bootstrap": "^3.3.7",
     "angular-ui-router": "^1.0.3",
     "animate.css": "^3.5.2",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "mdi": "^1.9.33"
   }
 }
