--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "del": "^2.2.2",
     "ejs": "~2.5.6",
     "errorhandler": "^1.5.0",
-    "express": "~4.15.2",
+    "express": "^4.15.2",
     "express-session": "^1.15.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-ngmin": "^0.3.0",
@@ -31,6 +31,7 @@
     "optimist": "^0.6.1",
     "path": "^0.12.7",
     "serve-favicon": "~2.4.2",
+    "socket.io": "^2.0.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
